# new_conda_env

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  wanted_venn.drawio.html
new_conda_env/: __init__.py  cli.py  envir.py  main.py  processing.py
notebooks/: dev.ipynb  env_ds310_hist.yml  env_ds310_nobld.yml  locate.ipynb
src/newenv/: locate.py  snippets.txt
tests/: lean_ds39_from_ds310.yml  test_cli.py  test_cli_parser.py  test_envir.py  test_log_level.py  test_main.py  test_processing.py
